<resources>

    <!-- App Resources -->
    <string name="app_name">Quizer</string>

    <!-- Main Menu Strings -->
    <string name="to_quiz">Quiz</string>
    <string name="to_add_questions">Add Questions</string>

    <!-- Question List Strings -->
    <string name="questions_list_actionbar_label">Questions</string>
    <string name="empty_question_label">Question not created.</string>

    <!-- Questions Details Strings -->
    <string name="question_details_actionbar_label">Edit Question</string>
    <string name="question_headline">Question</string>
    <string name="title_hint">Enter your question here.</string>
    <string name="answer_headline">Answer</string>
    <string name="true_headline">True</string>
    <string name="false_headline">False</string>

    <!-- Add Question Button -->
    <string name="add_question_button">+</string>

    <!-- Snackbar Undo -->
    <string name="undo_option">Undo Delete</string>
    <string name="deleted_message">%1$s deleted"</string>

    <!-- Quiz Mode -->
    <string name="score_headline">Score:</string>
    <string name="left_headline">Left</string>
    <string name="correct_headline">Correct</string>
    <string name="out_of_slash">/</string>
    <!-- Three part final message string (each number has a space generated on either side in code -->
    <string name="final_message_part_1">You got</string> <!-- Followed by number of questions correct -->
    <string name="final_message_part_2">out of</string> <!-- Followed by number of questions total -->
    <string name="final_message_part_3">correct!</string> <!-- Final text displayed after total -->
    <!-- Congratulatory messages -->
    <string name="congrats_0">Honestly, that was terrible.</string>
    <string name="congrats_25"></string>

    <!-- Accessibility -->
    <string name="true_symbol_description">A true check mark.</string>
    <string name="false_symbol_description">A false check mark.</string>



</resources>